Added intro and project content (partial)

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-gem"></span>
+							<!-- <span class="icon fa-gem"></span> -->
+							<i class="fas fa-graduation-cap fa-2x"></i>
 						</div>
 						<div class="content">
 							<div class="inner">
@@ -30,9 +31,9 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#about">About</a></li>
+								<li><a href="#about">About Me</a></li>
 								<li><a href="#intro">Intro</a></li>
-								<li><a href="#work">Work</a></li>
+								<li><a href="#work">Projects</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<li><a href="#elements">Elements</a></li>
 							</ul>
@@ -52,17 +53,31 @@
 
 						<!-- Work -->
 							<article id="work">
-								<h2 class="major">Work</h2>
+								<h2 class="major">Projects</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
+								<p>Listing relevant projects that I worked on.</p>
+								<h3>Multi agent Project</h3>
+								<p>This is a multi agent project that I worked on in the Robotarium</p>
+								<span class="image main"><img src="images/pic02.jpg" alt="Image from the multi agent project" /></span>
+								<ul class="icons">
+									<li><a href="#" ><i class="fab fa-github-alt fa-lg"></i></a></li>
+								    <li><a href="#" ><i class="fas fa-scroll"></i></a></li>
+								</ul>
+								<hr />
+								<h3>Undergraduate Capstone</h3>
+								<hr />
+								<h3>Xiong Lab Project Works</h3>
+								<hr />
 								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
 							</article>
 
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<span class="image main"><img src="images/cool_drone.jpg" alt="" /><i>Credit: Max Pixel</i></span>
+								<p>Hey this is Sridhar Reddy. I'm a graduate Electrical Engineer currently pursuing my Master's degree in Robotics at Georgia Tech.</p>
+								<p>I think robotics is such an amazing field where you get to build and play with a toy and make an impact to a real life application. Just being able to learn to write simple instructions to command this cool plaything brings me joy and satisfaction. Though the learning curve sometimes becomes steep and seems unattainable, the drive to succeed is strong and keeps me moving to achieve a greater reward in the end.</p>
+								<p>Anyways, my current interest is in developing control algorithms for aerial robots making them agile, efficient, and cool. Though there are many childhood factors driving my craze for robots, this <a href="https://www.ted.com/talks/raffaello_d_andrea_the_astounding_athletic_power_of_quadcopters">TED talk by <i>Raffaello D'Andrea</i></a> is why I wanted to work specifically in aerial robotics. The way aerial robots such as quadcopters move in the air with such precision and agility (like in drone racing, and videography) seems so super human and awe inspiring. My other interest is in multi-agent systems which one day would allow me to command a swarm of drones becoming my new super power.</p>
 							</article>
 
 						<!-- Contact -->
