DroneRL_paper_addition

--- a/index.html
+++ b/index.html
@@ -56,6 +56,16 @@
 								<h2 class="major">Projects</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<p>Listing relevant projects that I worked on.</p>
+								<hr />
+								<h3>RL approach to Multi-Rotor Failure in Quadcopters</h3>
+								<p style="font-size:13px"><i>Sridhar Reddy Velagala, Nikhil Badami</i></p>
+								<p>We used reinforcement learning to train a neural network to stabilize and control a quadcopter in the event of rotor failure.</p>
+								<span class="image main"><img src="images/pic02.jpg" alt="Image from the multi agent project" /></span>
+								<ul class="icons">
+									<li><a href="#" ><i class="fab fa-github-alt fa-lg"></i></a></li>
+								    <li><a href="project_files/DroneRL_Final_Paper.pdf" target="_blank"><i class="fas fa-scroll"></i></a></li>
+								</ul>
+								<hr />
 								<h3>Multi agent Project</h3>
 								<p>This is a multi agent project that I worked on in the Robotarium</p>
 								<span class="image main"><img src="images/pic02.jpg" alt="Image from the multi agent project" /></span>
@@ -75,7 +85,7 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/cool_drone.jpg" alt="" /><i>Credit: Max Pixel</i></span>
-								<p>Hey this is Sridhar Reddy. I'm a graduate Electrical Engineer currently pursuing my Master's degree in Robotics at Georgia Tech.</p>
+								<p>Hey this is Sridhar. I'm a graduate Electrical Engineer currently pursuing my Master's degree in Robotics at Georgia Tech.</p>
 								<p>I think robotics is such an amazing field where you get to build and play with a toy and make an impact to a real life application. Just being able to learn to write simple instructions to command this cool plaything brings me joy and satisfaction. Though the learning curve sometimes becomes steep and seems unattainable, the drive to succeed is strong and keeps me moving to achieve a greater reward in the end.</p>
 								<p>Anyways, my current interest is in developing control algorithms for aerial robots making them agile, efficient, and cool. Though there are many childhood factors driving my craze for robots, this <a href="https://www.ted.com/talks/raffaello_d_andrea_the_astounding_athletic_power_of_quadcopters">TED talk by <i>Raffaello D'Andrea</i></a> is why I wanted to work specifically in aerial robotics. The way aerial robots such as quadcopters move in the air with such precision and agility (like in drone racing, and videography) seems so super human and awe inspiring. My other interest is in multi-agent systems which one day would allow me to command a swarm of drones becoming my new super power.</p>
 							</article>
