image pseudo feathering GIF image for Drone RL project

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 								<p>Listing relevant projects that I worked on.</p>
 								<hr />
 								<h3>RL approach to Multi-Rotor Failure in Quadcopters</h3>
-								<p style="font-size:13px"><i>Sridhar Reddy Velagala, Nikhil Badami</i></p>
-								<p>We used reinforcement learning to train a neural network to stabilize and control a quadcopter in the event of rotor failure.</p>
-								<span class="image main"><img src="images/pic02.jpg" alt="Image from the multi agent project" /></span>
+								<p style="font-size:13px;line-height:0.1"><i>Sridhar Reddy Velagala, Nikhil Badami</i></p>
+								<p>Used reinforcement learning to train a neural network to stabilize and control a quadcopter in the event of rotor failure.</p>
+								<span class="image main"><img src="images/DroneRL_thumbnail.gif" alt="GIF from the DroneRL project" /></span>
 								<ul class="icons">
 									<li><a href="#" ><i class="fab fa-github-alt fa-lg"></i></a></li>
 								    <li><a href="project_files/DroneRL_Final_Paper.pdf" target="_blank"><i class="fas fa-scroll"></i></a></li>
