Added icon and new page for project

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<script src="https://kit.fontawesome.com/706e21b728.js" crossorigin="anonymous"></script>
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -50,6 +51,20 @@
 								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
 							</article>
+						
+						<!-- Drone RL Project-->
+							<article id="droneRL_Project">
+								<h3 class="major">RL approach to Multi-Rotor Failure in Quadcopters</h2>
+								<p style="font-size:13px;line-height:0.1"><i>Sridhar Reddy Velagala, Nikhil Badami</i></p>
+								<span class="image main"><img src="images/DroneRL_thumbnail.gif" alt="GIF from the DroneRL project" /></span>
+								<ul class="icons">
+									<li><a href="https://github.com/Sridhar701Pitt/RL-approach-to-Multi-Rotor-Failure-in-Quadcopters" ><i class="fab fa-github-alt fa-lg"></i></a></li>
+								    <li><a href="project_files/DroneRL_Final_Paper.pdf" target="_blank"><i class="fas fa-scroll"></i></a></li>
+									<li><a href="#work"><i class="fa-solid fa-circle-arrow-left fa-2xl" style="color: rgb(94, 94, 100)"></i></a></li>
+								</ul>
+								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+							</article>
 
 						<!-- Work -->
 							<article id="work">
@@ -57,13 +72,14 @@
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<p>Listing relevant projects that I worked on.</p>
 								<hr />
-								<h3>RL approach to Multi-Rotor Failure in Quadcopters</h3>
+								<h3><a href="#droneRL_Project">RL approach to Multi-Rotor Failure in Quadcopters</a></h3>
 								<p style="font-size:13px;line-height:0.1"><i>Sridhar Reddy Velagala, Nikhil Badami</i></p>
 								<p>Used reinforcement learning to train a neural network to stabilize and control a quadcopter in the event of rotor failure.</p>
 								<span class="image main"><img src="images/DroneRL_thumbnail.gif" alt="GIF from the DroneRL project" /></span>
 								<ul class="icons">
-									<li><a href="#" ><i class="fab fa-github-alt fa-lg"></i></a></li>
+									<li><a href="https://github.com/Sridhar701Pitt/RL-approach-to-Multi-Rotor-Failure-in-Quadcopters" ><i class="fab fa-github-alt fa-lg"></i></a></li>
 								    <li><a href="project_files/DroneRL_Final_Paper.pdf" target="_blank"><i class="fas fa-scroll"></i></a></li>
+									<li><a href="#droneRL_Project"><i class="fa-solid fa-circle-arrow-right fa-2xl"></i></a></li>
 								</ul>
 								<hr />
 								<h3>Multi agent Project</h3>
